--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,9 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
 </head>
 <body>
-  <div class="page-background"></div>
+  <!-- <div class="page-background"></div> -->
   <header class="header">
-    <img class="main-logo" src="./images/feud76.png" alt="Family Feud Logo">
+    <img class="main-logo" src="/images/feud76.png" alt="Family Feud Logo">
     <button id="start-btn">Start New Game</button>
   </header>
   <main class="main">
